kinda fixed windows behind icons

--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ h1{
 /*WINDOWS CREATING FUNCTION END*/
 
 #container {
-  position: relative;
+  position: fixed;
   width: 100%;
   height: 100vh;
   overflow: hidden;
@@ -139,7 +139,7 @@ h1{
   width: 400px;
   height: 200px;
   background-color: #f1f1f1;
-  border: 1px solid #ccc;
+  border: 3px solid #4590f5;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
@@ -149,7 +149,7 @@ h1{
 .header {
   background-color: #0078D7;
   color: white;
-  padding: 5px;
+  padding: 3px;
   cursor: move;
   display: flex;
   justify-content: space-between;
@@ -158,7 +158,8 @@ h1{
 
 .header-buttons {
   display: flex;
-  gap: 5px;
+  min-height: 23px;
+  padding: 0 12px;
 }
 
 .header-buttons button {
